--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -4,9 +4,9 @@ WORKDIR /usr/app
 
 COPY package*.json ./
 
-ENV NODE_ENV production
+ENV NODE_ENV dev
 
-RUN npm ci --only=production
+RUN npm install
 
 COPY . .
 
